--- a/prepros.cfg
+++ b/prepros.cfg
@@ -26,17 +26,28 @@
           ],
           "type": "less"
         },
+        "7a254d3f": {
+          "id": "7a254d3f",
+          "path": "less/index.html",
+          "output": "less/index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "8da580d7": {
           "id": "8da580d7",
           "path": "less/main.less",
-          "output": "less/css/all.css",
+          "output": "css/main.css",
           "name": "main.less",
           "category": "CSS",
           "autoCompile": true,
-          "autoprefixer": true,
+          "autoprefixer": false,
           "compress": false,
           "sourceMaps": false,
-          "customOutput": true,
+          "customOutput": false,
           "imported": false,
           "parents": [],
           "type": "less"
@@ -75,11 +86,11 @@
           ],
           "type": "less"
         },
-        "f60b0925": {
-          "id": "f60b0925",
-          "path": "less/components/card.less",
-          "output": "css/components/card.css",
-          "name": "card.less",
+        "d0e7e32c": {
+          "id": "d0e7e32c",
+          "path": "less/components/button.less",
+          "output": "css/components/button.css",
+          "name": "button.less",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -93,11 +104,11 @@
           ],
           "type": "less"
         },
-        "1bcb8aaa": {
-          "id": "1bcb8aaa",
-          "path": "less/components/list.less",
-          "output": "css/components/list.css",
-          "name": "list.less",
+        "f60b0925": {
+          "id": "f60b0925",
+          "path": "less/components/card.less",
+          "output": "css/components/card.css",
+          "name": "card.less",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -129,24 +140,6 @@
           ],
           "type": "less"
         },
-        "d0e7e32c": {
-          "id": "d0e7e32c",
-          "path": "less/components/button.less",
-          "output": "css/components/button.css",
-          "name": "button.less",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "compress": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "8da580d7",
-            "8271eabd"
-          ],
-          "type": "less"
-        },
         "d868789e": {
           "id": "d868789e",
           "path": "less/components/form.less",
@@ -160,8 +153,26 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "8da580d7",
-            "8271eabd"
+            "8271eabd",
+            "8da580d7"
+          ],
+          "type": "less"
+        },
+        "1bcb8aaa": {
+          "id": "1bcb8aaa",
+          "path": "less/components/list.less",
+          "output": "css/components/list.css",
+          "name": "list.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "8271eabd",
+            "8da580d7"
           ],
           "type": "less"
         },
@@ -178,21 +189,10 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "8da580d7",
-            "8271eabd"
+            "8271eabd",
+            "8da580d7"
           ],
           "type": "less"
-        },
-        "7a254d3f": {
-          "id": "7a254d3f",
-          "path": "less/index.html",
-          "output": "less/index.html",
-          "name": "index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
         },
         "9f940e8c": {
           "id": "9f940e8c",
